5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1807_2570.log
== TEST (2019-06-10 07:41:39) 
-- CODE:
from numpy import*
x = array(
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- ERROR:
File "XXXX", line 4
    m = mean(x)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 07:42:41) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 07:43:01) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 07:43:14) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 07:43:26) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,4))
-- EXECUTION TIME:
1.12161
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.8389
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.7572
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.2119
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 07:43:33) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- EXECUTION TIME:
1.07976
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:16:24) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = (x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:16:28) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = (x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- EXECUTION TIME:
0.995539
-- ERROR:
/home/codebench/codes/1807/2570/main.py:10: RuntimeWarning: invalid value encountered in double_scalars
  k = (p)**(1/n)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:16:36) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- EXECUTION TIME:
0.868283
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:21:27) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	p = p + 1
	
k = (p)**(1/n)
print(round(k,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:21:33) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	p = p + 1
	
k = (p)**(1/n)
print(round(k,3))
-- EXECUTION TIME:
0.958032
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.884
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.855
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
9.129
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:21:37) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	p = p + 1
	
k = (p)**(1/n)
print(round(k,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:21:46) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	p = p + 1
	
k = (p)**(1/n)
print(round(k,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:22:26) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:24:51) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:38:21) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:38:28) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- EXECUTION TIME:
1.64972
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:38:29) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- EXECUTION TIME:
2.63053
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
